# spin-timer

./: .editorconfig  .gitignore  CMakeLists.txt  CODE_OF_CONDUCT.md  LICENSE  README.md  SpinTimer.cpp  SpinTimer.h  SpinTimerContext.cpp  SpinTimerContext.h  Timer.cpp  Timer.h  TimerContext.cpp  TimerContext.h  UptimeInfo.cpp  UptimeInfo.h  index.html  keywords.txt  library.properties  params.json
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build-test.yml  unit-tests.yml
Examples/: Blink_with_Timer.ino
Examples/Blink_with_Timer/: Blink_with_Timer.ino
Examples/DoubleStrobeBlink_with_Timer/: DoubleStrobeBlink_with_Timer.ino
Examples/SimpleCounter/: CMakeLists.txt  MySpinTimerAction.hpp  main.cpp
Examples/UptimeInfoAdapter/Raspbian/: RaspbianUptimeAdapter.h
Examples/UptimeInfoAdapter/STM32Cube/: STM32UptimeInfoAdapter.h
Timer/: Timer.cpp  Timer.h  TimerAdapter.cpp  TimerAdapter.h  TimerContext.h  UptimeInfo.cpp  UptimeInfo.h  keywords.txt
Timer/Examples/: Blink_with_Timer.ino
Timer/doc/: Timer.doxyfile
Timer/doc/html/: _timer_8cpp.html  _timer_8cpp.js  _timer_8cpp__incl.dot  _timer_8cpp__incl.md5  _timer_8h.html  _timer_8h.js  _timer_8h__dep__incl.dot  _timer_8h__dep__incl.md5  annotated.html  (+42 more)
Timer/model/: Timer.eap
cmake/: Documentation.cmake
doc/: Doxyfile.in
doc/html/: _c_make_c_x_x_compiler_id_8cpp.html  _c_make_cache_8txt.html  _c_make_lists_8txt.html  _c_o_d_e___o_f___c_o_n_d_u_c_t_8md.html  _examples_2_simple_counter_2_c_make_lists_8txt.html  _examples_2_simple_counter_2main_8cpp.html  _examples_2_simple_counter_2main_8cpp.js  _mock___spin_timer_action_8h.html  _mock___spin_timer_action_8h_source.html  _mock___uptime_info_8h.html  _mock___uptime_info_8h_source.html  _my_spin_timer_action_8hpp.html  _my_spin_timer_action_8hpp_source.html  _r_e_a_d_m_e_8md.html  _raspbian_uptime_adapter_8h.html  _raspbian_uptime_adapter_8h_source.html  _s_t_m32_uptime_info_adapter_8h.html  _s_t_m32_uptime_info_adapter_8h_source.html  _spin_timer_8cpp.html  _spin_timer_8cpp.js  _spin_timer_8h.html  _spin_timer_8h.js  _spin_timer_8h_source.html  _spin_timer_context_8cpp.html  _spin_timer_context_8h.html  _spin_timer_context_8h_source.html  _target_directories_8txt.html  _test___spin_timer_8cpp.html  _test___spin_timer_8cpp.js  _timer_8cpp.js  _timer_8cpp__incl.dot  _timer_8cpp__incl.md5  _timer_8h.html  _timer_8h.js  _timer_adapter_8h.html  _timer_adapter_8h__incl.md5  _timer_context_8cpp.html  _timer_context_8cpp__incl.dot  _timer_context_8h.html  _timer_context_8h__dep__incl.dot  (+99 more)
doc/model/: SpinTimer.eap
model/: Timer.eap
test/: CMakeLists.txt  CMakeLists.txt.in  Mock_SpinTimerAction.h  SpinTimerTest.cpp
tests/: CMakeLists.txt  CMakeLists.txt.in  Mock_UptimeInfo.h  Test_SpinTimer.cpp  main.cpp
(+80 files in other folders)
